[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dlh-utils"
version = "0.5.0"
description = "A PySpark package used to expedite and standardise the data linkage process"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jack Linaker", email = "187010584+jack-linaker@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "graphframes-jars>=0.5.0.0",
    "graphframes-py>=0.10.1",
    "ipython>=8.38.0",
    "jellyfish>=1.2.1",
    "openpyxl>=3.1.5",
    "pandas[performance, output-formatting]~=2.2.0",
    "py4j>=0.10.9.7",
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "prek>=0.3.2",
]
lint = ["ruff>=0.14.14"]
test = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "typing-extensions>=4.15.0"]

[project.optional-dependencies]
pyspark = ["pyspark[sql]>=3.5.0"]

[project.urls]
Homepage = "https://github.com/jack-linaker/dlh-utils"
Repository = "https://github.com/jack-linaker/dlh-utils"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100",   # test modules do not require docstrings
    "D101",   # test classes do not require docstrings
    "D102",   # test methods do not require docstrings
    "D103",   # test functions do not require docstrings
    "INP001", # pytest does not require an __init__.py
    "S101",   # pytest uses assert
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest]
addopts = ["--cov-report=term-missing:skip-covered", "--cov=src"]
testpaths = ["tests"]
